[gd_scene load_steps=25 format=3 uid="uid://cb2lak3w8b1s8"]

[ext_resource type="Script" path="res://scenes/game/kitchen.gd" id="1_737en"]
[ext_resource type="Texture2D" uid="uid://be35n4pr04nkx" path="res://icon.svg" id="1_euexd"]
[ext_resource type="Texture2D" uid="uid://nabw6f4disui" path="res://assets/resources/sprites/work_station.tres" id="2_gi7bb"]
[ext_resource type="Texture2D" uid="uid://dcode7kblp41y" path="res://assets/resources/sprites/register.tres" id="2_hv2ir"]
[ext_resource type="Texture2D" uid="uid://f6jubesn86as" path="res://assets/resources/sprites/large_counter.tres" id="2_to378"]
[ext_resource type="Script" path="res://scenes/game/workstation.gd" id="3_ualts"]
[ext_resource type="Texture2D" uid="uid://bxdxvy6nj7cam" path="res://assets/resources/sprites/stove.tres" id="5_0qxmp"]
[ext_resource type="Texture2D" uid="uid://q1ab3x30ngjg" path="res://assets/resources/sprites/ingredients/bun.tres" id="5_er5ok"]
[ext_resource type="Texture2D" uid="uid://glehc4nentpm" path="res://assets/resources/sprites/ingredients/bun_highlight.tres" id="6_xprxa"]
[ext_resource type="Texture2D" uid="uid://bro1j5oa72kh5" path="res://assets/resources/sprites/ingredients/meat.tres" id="8_42nsw"]
[ext_resource type="Texture2D" uid="uid://bk1h8kijlmou1" path="res://assets/resources/sprites/ingredients/meat_highlight.tres" id="9_lqetf"]
[ext_resource type="Texture2D" uid="uid://1k21cq24s2qa" path="res://assets/resources/sprites/ingredients/lettuce.tres" id="10_1mb32"]
[ext_resource type="Texture2D" uid="uid://drwvtemey5k00" path="res://assets/resources/sprites/ingredients/lettuce_highlight.tres" id="11_r8857"]
[ext_resource type="Texture2D" uid="uid://oyhvth8irtnn" path="res://assets/resources/sprites/ingredients/tomato.tres" id="12_rknrk"]
[ext_resource type="Texture2D" uid="uid://nrvg88xgp6gg" path="res://assets/resources/sprites/ingredients/tomato_highlight.tres" id="13_x2inu"]
[ext_resource type="Texture2D" uid="uid://cr7wjm6r4vxtf" path="res://assets/resources/sprites/ingredients/cheese.tres" id="14_t0dgj"]
[ext_resource type="Texture2D" uid="uid://c3slng3wgpjjd" path="res://assets/resources/sprites/ingredients/cheese_highlight.tres" id="15_bm1ut"]
[ext_resource type="Texture2D" uid="uid://g6e2epnrvqkg" path="res://assets/resources/sprites/ingredients/ketchup.tres" id="16_vtaef"]
[ext_resource type="Texture2D" uid="uid://byv5ky3daq3ph" path="res://assets/resources/sprites/ingredients/ketchup_highlight.tres" id="17_8eli0"]
[ext_resource type="Texture2D" uid="uid://cjpq22nblldqw" path="res://assets/resources/sprites/ingredients/mustard.tres" id="18_8nry3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lr1xd"]
size = Vector2(128, 127)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dt4bo"]
size = Vector2(40, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l3xul"]
size = Vector2(16, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_62g6r"]
size = Vector2(16, 80)

[node name="kitchen_a" type="Node2D"]
texture_filter = 1
script = ExtResource("1_737en")
customers = Array[Texture2D]([ExtResource("1_euexd")])

[node name="customers" type="Node2D" parent="."]

[node name="spot_1" type="Sprite2D" parent="customers"]
position = Vector2(89, 88)
texture = ExtResource("1_euexd")

[node name="area_1" type="Area2D" parent="customers/spot_1" groups=["Target_Area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="customers/spot_1/area_1"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_lr1xd")

[node name="spot_2" type="Sprite2D" parent="customers"]
position = Vector2(222, 88)
texture = ExtResource("1_euexd")

[node name="area_2" type="Area2D" parent="customers/spot_2" groups=["Target_Area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="customers/spot_2/area_2"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_lr1xd")

[node name="spot_3" type="Sprite2D" parent="customers"]
position = Vector2(351, 88)
texture = ExtResource("1_euexd")

[node name="area_3" type="Area2D" parent="customers/spot_3" groups=["Target_Area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="customers/spot_3/area_3"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_lr1xd")

[node name="spot_4" type="Sprite2D" parent="customers"]
position = Vector2(483, 88)
texture = ExtResource("1_euexd")

[node name="area_4" type="Area2D" parent="customers/spot_4" groups=["Target_Area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="customers/spot_4/area_4"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_lr1xd")

[node name="background_1" type="Node2D" parent="."]
position = Vector2(0, -168)

[node name="Sprite2D" type="Sprite2D" parent="background_1"]
position = Vector2(144, 368)
scale = Vector2(2, 2)
texture = ExtResource("2_to378")

[node name="Sprite2D2" type="Sprite2D" parent="background_1"]
position = Vector2(432, 368)
scale = Vector2(2, 2)
texture = ExtResource("2_to378")

[node name="Sprite2D3" type="Sprite2D" parent="background_1"]
position = Vector2(496, 272)
scale = Vector2(2, 2)
texture = ExtResource("2_hv2ir")

[node name="background_2" type="Node2D" parent="."]
position = Vector2(-20, -32)

[node name="workstation_bun" type="Area2D" parent="background_2" node_paths=PackedStringArray("highlight") groups=["Workstation"]]
position = Vector2(72, 304)
scale = Vector2(2, 2)
script = ExtResource("3_ualts")
ingredient = "Bun"
highlight = NodePath("sprite/ingredient_sprite/highlight")

[node name="CollisionShape2D" type="CollisionShape2D" parent="background_2/workstation_bun"]
position = Vector2(0, 20)
shape = SubResource("RectangleShape2D_dt4bo")

[node name="sprite" type="Sprite2D" parent="background_2/workstation_bun"]
texture = ExtResource("2_gi7bb")

[node name="ingredient_sprite" type="Sprite2D" parent="background_2/workstation_bun/sprite"]
position = Vector2(0, -28)
scale = Vector2(2, 2)
texture = ExtResource("5_er5ok")

[node name="highlight" type="Sprite2D" parent="background_2/workstation_bun/sprite/ingredient_sprite"]
texture = ExtResource("6_xprxa")

[node name="workstation_meat" type="Area2D" parent="background_2" node_paths=PackedStringArray("highlight") groups=["Workstation"]]
position = Vector2(192, 288)
scale = Vector2(2, 2)
script = ExtResource("3_ualts")
ingredient = "Meat"
highlight = NodePath("sprite/ingredient_sprite/highlight")

[node name="CollisionShape2D" type="CollisionShape2D" parent="background_2/workstation_meat"]
position = Vector2(0, 20)
shape = SubResource("RectangleShape2D_dt4bo")

[node name="sprite" type="Sprite2D" parent="background_2/workstation_meat"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_0qxmp")

[node name="ingredient_sprite" type="Sprite2D" parent="background_2/workstation_meat/sprite"]
position = Vector2(0, -28)
scale = Vector2(2.25, 2.25)
texture = ExtResource("8_42nsw")

[node name="highlight" type="Sprite2D" parent="background_2/workstation_meat/sprite/ingredient_sprite"]
texture = ExtResource("9_lqetf")

[node name="workstation_lettuce" type="Area2D" parent="background_2" node_paths=PackedStringArray("highlight") groups=["Workstation"]]
position = Vector2(312, 304)
scale = Vector2(2, 2)
script = ExtResource("3_ualts")
highlight = NodePath("sprite/ingredient_sprite/highlight")

[node name="CollisionShape2D" type="CollisionShape2D" parent="background_2/workstation_lettuce"]
position = Vector2(0, 20)
shape = SubResource("RectangleShape2D_dt4bo")

[node name="sprite" type="Sprite2D" parent="background_2/workstation_lettuce"]
texture = ExtResource("2_gi7bb")

[node name="ingredient_sprite" type="Sprite2D" parent="background_2/workstation_lettuce/sprite"]
position = Vector2(0, -28)
scale = Vector2(2, 2)
texture = ExtResource("10_1mb32")

[node name="highlight" type="Sprite2D" parent="background_2/workstation_lettuce/sprite/ingredient_sprite"]
texture = ExtResource("11_r8857")

[node name="workstation_tomato" type="Area2D" parent="background_2" node_paths=PackedStringArray("highlight") groups=["Workstation"]]
position = Vector2(408, 304)
scale = Vector2(2, 2)
script = ExtResource("3_ualts")
ingredient = "Tomato"
highlight = NodePath("sprite/ingredient_sprite/highlight")

[node name="CollisionShape2D" type="CollisionShape2D" parent="background_2/workstation_tomato"]
position = Vector2(0, 20)
shape = SubResource("RectangleShape2D_dt4bo")

[node name="sprite" type="Sprite2D" parent="background_2/workstation_tomato"]
texture = ExtResource("2_gi7bb")

[node name="ingredient_sprite" type="Sprite2D" parent="background_2/workstation_tomato/sprite"]
position = Vector2(0, -28)
scale = Vector2(2, 2)
texture = ExtResource("12_rknrk")

[node name="highlight" type="Sprite2D" parent="background_2/workstation_tomato/sprite/ingredient_sprite"]
texture = ExtResource("13_x2inu")

[node name="workstation_cheese" type="Area2D" parent="background_2" node_paths=PackedStringArray("highlight") groups=["Workstation"]]
position = Vector2(506, 304)
scale = Vector2(2, 2)
script = ExtResource("3_ualts")
ingredient = "Cheese"
highlight = NodePath("sprite/ingredient_sprite/highlight")

[node name="CollisionShape2D" type="CollisionShape2D" parent="background_2/workstation_cheese"]
position = Vector2(0, 20)
shape = SubResource("RectangleShape2D_dt4bo")

[node name="sprite" type="Sprite2D" parent="background_2/workstation_cheese"]
texture = ExtResource("2_gi7bb")

[node name="ingredient_sprite" type="Sprite2D" parent="background_2/workstation_cheese/sprite"]
position = Vector2(0, -28)
scale = Vector2(2, 2)
texture = ExtResource("14_t0dgj")

[node name="highlight" type="Sprite2D" parent="background_2/workstation_cheese/sprite/ingredient_sprite"]
texture = ExtResource("15_bm1ut")

[node name="workstation_ketchup" type="Area2D" parent="background_2" node_paths=PackedStringArray("highlight") groups=["Workstation"]]
position = Vector2(578, 304)
scale = Vector2(2, 2)
script = ExtResource("3_ualts")
ingredient = "Ketchup"
highlight = NodePath("sprite/ingredient_sprite/highlight")

[node name="CollisionShape2D" type="CollisionShape2D" parent="background_2/workstation_ketchup"]
position = Vector2(0, 20)
shape = SubResource("RectangleShape2D_l3xul")

[node name="sprite" type="Sprite2D" parent="background_2/workstation_ketchup"]
position = Vector2(12, 0)
texture = ExtResource("2_gi7bb")

[node name="ingredient_sprite" type="Sprite2D" parent="background_2/workstation_ketchup/sprite"]
position = Vector2(-12, -28)
scale = Vector2(2, 2)
texture = ExtResource("16_vtaef")

[node name="highlight" type="Sprite2D" parent="background_2/workstation_ketchup/sprite/ingredient_sprite"]
texture = ExtResource("17_8eli0")

[node name="workstation_mustard" type="Area2D" parent="background_2" node_paths=PackedStringArray("highlight") groups=["Workstation"]]
position = Vector2(626, 304)
scale = Vector2(2, 2)
script = ExtResource("3_ualts")
ingredient = "Mustard"
highlight = NodePath("sprite/ingredient_sprite/highlight")

[node name="CollisionShape2D" type="CollisionShape2D" parent="background_2/workstation_mustard"]
position = Vector2(0, 20)
shape = SubResource("RectangleShape2D_62g6r")

[node name="sprite" type="Sprite2D" parent="background_2/workstation_mustard"]

[node name="ingredient_sprite" type="Sprite2D" parent="background_2/workstation_mustard/sprite"]
position = Vector2(0, -28)
scale = Vector2(2, 2)
texture = ExtResource("18_8nry3")

[node name="highlight" type="Sprite2D" parent="background_2/workstation_mustard/sprite/ingredient_sprite"]
texture = ExtResource("17_8eli0")
